--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@react-three/fiber": "^9.3.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.9",
     "axios": "^1.11.0",
+    "firebase": "^12.6.0",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.542.0",
@@ -31,7 +33,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.5",
+    "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.0",
     "redux-persist": "^6.0.0",
