--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
