--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5",
