--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "axios": "^1.11.0",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.4",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.542.0",
