--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "recharts": "^3.2.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
